# learning_python

./: README.md  pyproject.toml  requirements.txt
drip_styles/: exercises.html  table_of_contents.html
lesson1/collateral/: my_code.py
lesson1/exercises/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py
lesson10/exercises/: exercise1.txt  exercise2.txt  exercise3.txt
lesson2/exercises/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  show_version.txt
lesson3/collateral/: cond_ex.py  while_loop.py
lesson3/exercises/: cfg_vlan.txt  exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  junos_show_arp.txt  notes.txt  show_ip_int_brief.txt
lesson4/collateral/: ssh_except.py  test_except.py
lesson4/exercises/: arubacx_show_vlan.txt  exercise1.py  exercise2.py  exercise4.py  exercise5.py  show_ip_int_brief.txt
lesson5/exercises/: arista_show_ip_arp.txt  aruba_cx_show_ipv6_intf.txt  exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  show_ip_bgp_neighbors.txt  show_lldp.txt
lesson6/: .do_not.py.swp  .kwargs_example2.py.swp
lesson6/exercises/: exercise1.py  exercise1x.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  ssh_docs.py  ssh_kwargs.py  ssh_page.py  ssh_simple.py  ssh_test.py  tn_simple.py  tn_test.py
lesson7/collateral/: class_simple.py  class_simple.py.orig
lesson7/exercises/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py
lesson8/collateral/: circle_ex.py  prop_example.py  prop_test.py  telnet_conn.py  telnet_conn_props.py
(+111 files in other folders)
